# zed-codex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm
.github/workflows/: ci.yml  release-server.yml
configuration/: default_settings.jsonc  installation_instructions.md
docs/: TUTORIAL.ru.md  zed-profile.example.jsonc
server/: Cargo.toml
server/src/: acp.rs  cache.rs  codex_bridge.rs  config.rs  formatting.rs  git_tools.rs  indexer.rs  lib.rs  main.rs  model.rs  planning.rs  skills.rs  state.rs  tests.rs  text.rs
server/src/acp/: tests.rs
server/src/cache/: tests.rs
server/src/codex_bridge/: tests.rs
server/src/indexer/: tests.rs
server/src/skills/: tests.rs
server/src/state/: tests.rs
server/src/text/: tests.rs
src/: lib.rs
