[package]
name = "codex_companion"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[workspace]
members = ["server"]
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
zed_extension_api = "0.7.0"
