[package]
name = "codex-companion-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "codex-companion-acp-agent"
path = "src/bin/acp_agent.rs"

[dependencies]
agent-client-protocol = "0.10.2"
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
globset = "0.4"
ignore = "0.4"
regex = "1.12"
rmcp = { version = "1.2.0", features = ["transport-io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
